--- a/package.json
+++ b/package.json
@@ -9,19 +9,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nicolewallace09/employee-tracker.git"
+    "url": "git+https://github.com/ashleymullikin/employee-tracker"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nicolewallace09/employee-tracker/issues"
-  },
-  "homepage": "https://github.com/nicolewallace09/employee-tracker#readme",
-  "dependencies": {
-    "console.table": "^0.10.0",
-    "dotenv": "^8.2.0",
-    "inquirer": "^7.1.0",
-    "mysql2": "^2.1.0"
-  }
+  "homepage": "https://github.com/ashleymullikin/employee-tracker/blob/main/README.md",
+  "remoteUser": "vscode",
+  "runArgs":["--env-file", ".employee-tracker/credentials.env"]
 }
